# jnuc-2022

./: OWNERS  README.md
OktaIDLib/: README.md  okta_id_lib.py  pyproject.toml
OktaIDLib/oktaidlib/: __init__.py
account_demobilization_tool/: LICENSE.md  Makefile  README.md  build-info.json
account_demobilization_tool/payload/var/tmp/: com.demobilize  com.demobilize.appearance
account_demobilization_tool/scripts/: postinstall
